# accelertater

./: .cursorrules  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/taters/: __init__.py  container.py  main.py
src/taters/actions/: __init__.py  dad_joke_action.py  hello_action.py
src/taters/repositories/: __init__.py  dad_joke_repository.py
src/taters/services/: dad_joke_service.py
tests/: test_container.py  test_main.py
tests/actions/: __init__.py  test_dad_joke_action.py  test_hello_action.py
tests/repositories/: __init__.py  test_dad_joke_repository_new.py
tests/services/: __init__.py  test_dad_joke_service.py
